[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/player/Player_Sprite.png" type="Texture" id=1]
[ext_resource path="res://resources/particles/Soft_Dot.png" type="Texture" id=2]
[ext_resource path="res://scripts/player/player.gd" type="Script" id=3]
[ext_resource path="res://scripts/player/thruster.gd" type="Script" id=4]
[ext_resource path="res://resources/particles/Soft_Dot_Orange.png" type="Texture" id=5]
[ext_resource path="res://resources/sounds/mickboere_jet-loop-01.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/player/Weapon01.png" type="Texture" id=7]
[ext_resource path="res://scripts/player/gatling.gd" type="Script" id=8]
[ext_resource path="res://resources/sounds/gatling_01.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/player/PlayerShader.tres" type="Material" id=10]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, -1.0, 0, 1, Vector2( 1, 0 ), -1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 40.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.2
orbit_velocity = 0.2
orbit_velocity_random = 0.2
scale = 1.5
scale_curve = SubResource( 2 )
color = Color( 0.941176, 0.235294, 0, 1 )

[node name="Player" type="RigidBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 21
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Gatling" type="Sprite" parent="."]
position = Vector2( 4, 0 )
z_index = -1
texture = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftMuzzle" type="Node2D" parent="Gatling"]
position = Vector2( 3, -5 )
z_index = -1
__meta__ = {
"_edit_lock_": true
}

[node name="RightMuzzle" type="Node2D" parent="Gatling"]
position = Vector2( 3, 5 )
z_index = -1
__meta__ = {
"_edit_lock_": true
}

[node name="FireTimer" type="Timer" parent="Gatling"]

[node name="Sound" type="AudioStreamPlayer" parent="Gatling"]
stream = ExtResource( 9 )
volume_db = -35.0

[node name="Ship" type="Sprite" parent="." groups=[
"can_take_damage",
"player",
]]
material = ExtResource( 10 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Reactor" type="Particles2D" parent="Ship"]
position = Vector2( -9.5, 0 )
scale = Vector2( 0.04, 0.04 )
z_index = -10
amount = 32
lifetime = 100.0
preprocess = 20.0
speed_scale = 5.0
visibility_rect = Rect2( -95, -95, 190, 190 )
process_material = SubResource( 3 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Thruster" type="Node2D" parent="Ship"]
position = Vector2( -9, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Side Burn" type="Sprite" parent="Ship/Thruster"]
scale = Vector2( 0.15, 0.4 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Back Burn" type="Sprite" parent="Ship/Thruster"]
position = Vector2( -8, 0 )
scale = Vector2( 0.7, 0.15 )
z_index = -1
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sound" type="AudioStreamPlayer" parent="Ship/Thruster"]
stream = ExtResource( 6 )
volume_db = -60.0

[node name="Collider" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -11, 14, 12, 0, -11, -14 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="fire_main_started" from="." to="Gatling" method="_on_Player_fire_main_started"]
[connection signal="fire_main_stopped" from="." to="Gatling" method="_on_Player_fire_main_stopped"]
[connection signal="thrust_changed" from="." to="Ship/Thruster" method="_on_Player_thrust_changed"]
[connection signal="timeout" from="Gatling/FireTimer" to="Gatling" method="_on_FireTimer_timeout"]
